[tool.poetry]
name = "clipboardenglishenhancer"
version = "0.1.0"
description = ""
authors = ["tarurata <saycheese5963@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.7"
pyperclip = "^1.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
